# levenberg-marquardt-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/: LevenbergMarquardtSolver.h  LinearAlgebra.h  NonlinearSystem.h  NumericalJacobian.h
src/: LevenbergMarquardtSolver.cpp  LinearAlgebra.cpp  NonlinearSystem.cpp  NumericalJacobian.cpp
